Adding JVM Memory options functionality.